# echopages

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  production.env  pyproject.toml  simple.docker-compose.yml  test.env
.github/workflows/: ci.yml
echopages/: bootstrap.py  config.py  main.py  setup_app.py
echopages/api/: endpoints.py
echopages/application/: services.py
echopages/backend/: bootstrap.py  config.py
echopages/backend/api/: endpoints.py
echopages/backend/application/: services.py
echopages/backend/domain/: model.py  repositories.py
echopages/domain/: model.py  repositories.py
echopages/frontend/: Dockerfile
echopages/frontend/src/: App.js
echopages/infrastructure/: fakes.py  orm.py  samplers.py  schedulers.py  sql.py  sql_repositories.py  web.py
echopages/infrastructure/database/: file_db.py  orm.py  sql.py
echopages/infrastructure/delivery/: samplers.py  (+2 more)
features/: add_content.feature  configure_digests.feature  environment.py  get_all_content.feature  trigger_digest.feature
features/steps/: add_content.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
tests/: conftest.py  fakes.py  test_arch.py  test_samplers.py  test_schedulers.py  test_services.py
tests/functional/: test_add_content.py  test_configure_digests.py  test_get_all_content.py  test_trigger_digest.py
tests/integration/: test_file_services.py  test_sql_repository.py  test_sql_services.py  test_web.py
tests/unit/: test_samplers.py  test_schedulers.py  test_services.py
utils/: markdown_processing.py
(+23 files in other folders)
