[tool.poetry]
name = "echopages"
version = "0.1.0"
description = ""
authors = ["Gilberto Lem <gilberto.lem@orbem.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytestarch = "^3.0.0"
freezegun = "^1.5.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
