[tool.poetry]
name = "echopages"
version = "0.1.0"
description = ""
authors = ["Gilberto Lem <gilberto.lem@orbem.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
schedule = "^1.2.2"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytestarch = "^3.0.0"
pytest-cov = "^5.0.0"
time-machine = "^2.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
