[tool.poetry]
name = "echopages"
version = "0.1.0"
description = ""
authors = ["Gilberto Lem <gilberto.lem@orbem.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
schedule = "^1.2.2"
pytz = "^2024.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
jinja2 = "^3.1.4"
postmarker = "^1.0"
markdown = "^3.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytestarch = "^3.0.0"
pytest-cov = "^5.0.0"
time-machine = "^2.14.2"
requests = "^2.32.3"
mypy = "^1.10.1"
pytest-bdd = "^7.2.0"
types-markdown = "^3.6.0.20240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "postmarker.*,behave.*"
ignore_missing_imports = true
